--- a/whatsUpHere/app/src/main/res/values/strings.xml
+++ b/whatsUpHere/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
     <string name="cadastrar">Cadastrar</string>
     <string name="Chats">Ambientes</string>
     <string name="ListaContato">Contatos</string>
-    <string name="LHistorico">Historico de locais</string>
+    <string name="LHistorico">Mapa de locais</string>
     <string name="Config">Configurações</string>
     <string name="Tmail">Trocar Email</string>
     <string name="Tsenha">Trocar Senha</string>
@@ -20,4 +20,8 @@
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
     <string name="novo_email">Novo Email</string>
+    <string name="digite">Digite</string>
+    <string name="enviar">Enviar</string>
+    <string name="title_activity_maps">MapsActivity</string>
+    <string name="mapa_local">Mapa Local</string>
 </resources>
